--- a/css/style.css
+++ b/css/style.css
@@ -454,6 +454,7 @@ button {
 
 .particle {
   position: absolute;
+  bottom: 0;
   width: 4px;
   height: 4px;
   background: rgba(74, 158, 175, 0.3);
